--- a/src/can_bus_gui/CMakeLists.txt
+++ b/src/can_bus_gui/CMakeLists.txt
@@ -12,9 +12,9 @@ install(FILES
    plugin.xml
    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
-#install(DIRECTORY resource
-#   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-#)
+install(DIRECTORY resource
+   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
 install(PROGRAMS scripts/can_bus_gui
    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
